# succinct-cpp

./: .gitignore  CMakeLists.txt  CONTEXT.txt  Makefile  README  README.md  TODO.txt  build.sh  divsufsortxx_utility.hpp
adaptive/: CMakeLists.txt
adaptive/include/: AdaptiveManagementClient.hpp  AdaptiveMasterService.h  AdaptiveQueryService.h  AdaptiveSuccinctClient.hpp  adaptive_management_client.h  adaptive_succinct_client.h  adaptive_succinct_client.hpp  adaptive_types.h  dynamic_load_balancer.h  ports.h
adaptive/src/: AdaptiveMasterService.cpp  AdaptiveQueryServer.cpp  AdaptiveQueryService.cc  AdaptiveQueryService.cpp  AdaptiveSuccinctMaster.cpp  AdaptiveSuccinctServer.cpp  adaptive_query_server.cc  adaptive_succinct_server.cc  adaptive_types.cc
adaptive/templates/: adaptive.thrift  generate.sh
bench/: CMakeLists.txt
bench/conf/: adashard-bench.conf
bench/include/: AdaptBenchmark.hpp  AdaptiveQueryServerBenchmark.hpp  Benchmark.hpp  DynamicAdaptBenchmark.hpp  DynamicLoadBalancerBenchmark.hpp  FileBenchmark.hpp  LayeredSuccinctShardBenchmark.hpp  ShardBenchmark.hpp  SuccinctServerBenchmark.hpp  ZipfGenerator.hpp  adapt_benchmark.h  adaptive_query_server_benchmark.h  aqs_benchmark.h  benchmark.h  dlb_benchmark.h  dynamic_adapt_benchmark.h  dynamic_load_balancer_benchmark.h  file_benchmark.h  layered_succinct_shard_benchmark.h  lss_benchmark.h  shard_benchmark.h  succinct_benchmark.h  succinct_server_benchmark.h  succinctkv_benchmark.h  zipf_generator.h
bench/sbin/: plot.gp
bench/src/: adapt_benchmark.cc  adashard-bench.cpp  aqs-bench.cpp  aqs_benchmark.cc  dlb-bench.cpp  dlb_benchmark.cc  dynamic_adapt_benchmark.cc  file-bench.cpp  file_benchmark.cc  ls-bench.cpp  lss_benchmark.cc  queue-bench.cpp  regex_benchmark.cc  repair_benchmark.cc  shard-bench.cpp  shard_benchmark.cc  succinct_benchmark.cc  succinct_server_benchmark.cc  succinctkv_benchmark.cc  succinctserver-bench.cpp  sure-bench.cpp
benchmark/: Makefile  file-bench.cpp  reconstruct-bench.cpp  reconstruction-bench.cpp  succinct-bench.cpp  succinctserver-bench.cpp  sure-bench.cpp
benchmark-testing/: chunk_compressor.py  file_splitter.py  upload.sh
blowfish/: CMakeLists.txt
conf/: blowfish-failure.conf  blowfish-no-failure-2.conf  blowfish-no-failure.conf  blowfish-spatial.conf  blowfish.conf  erasure-no-failure-2.conf  erasure-no-failure.conf  erasure.conf  repl  repl.ec2  replication-failures.conf  replication-no-failure.conf  sel-repl-spatial.conf  succinct-env.sh
construct/: CMakeLists.txt
coordinator/: CMakeLists.txt
coordinator/include/: Coordinator.h  coordinator_constants.h  coordinator_types.h
coordinator/src/: Coordinator.cc  coordinator_constants.cc  coordinator_impl.cc  coordinator_types.cc
core/: CMakeLists.txt
ec2/: install-dependencies.sh  install_prereqs.sh  install_thrift.sh  setup.sh  succinct-env.sh.template
examples/: CMakeLists.txt
examples/data/: paths_sample  semistructured_sample
examples/lambda/: lambdatest.py
examples/pysuccinct/: pyfile.py  pyfile_input.py  pykv.py  pysemistructured.py
examples/src/: compress.cc  pykv.cpp  query_file.cc  query_kv.cc  query_paths.cc  query_semistructured.cc
handler/: CMakeLists.txt
handler/include/: Handler.h  SuccinctService.h  handler_constants.h  handler_heartbeat_manager.h  handler_types.h
handler/src/: Handler.cc  handler_constants.cc  handler_heartbeat_manager.cc  handler_impl.cc  handler_types.cc
lambda/: test.py
master/: CMakeLists.txt
master/include/: Master.h  global_heartbeat_manager.h  master_constants.h  master_heartbeat_manager.h  master_types.h
master/src/: Master.cc  global_heartbeat_manager.cc  master_constants.cc  master_heartbeat_manager.cc  master_impl.cc  master_types.cc  succinct_master.cc
pysuccinct/: CMakeLists.txt  file.cpp  kvstore.cpp  pycompress.cpp  pycompress.py  pyfile.cpp  pyfile.py  pykv.cpp  pykv.py  pyquery_file.cpp  pyquery_file.py  pyquery_kv.cpp  pyquery_kv.py  pyquery_semistructured.cpp  pyquery_semistructured.py  pysemistructured.cpp  pysemistructured.py  semistructuredstore.cpp
sbin/: hosts.sh  servers.sh  setup_cluster.py  setup_cluster.sh  start-aggregator.sh  start-ahandler.sh  start-ahandlers.sh  start-all.sh  start-amaster.sh  start-aserver.sh  start-aservers-local.sh  start-aservers.sh  start-atest.sh  start-blowfish.sh  start-coordinator.sh  start-handler.sh  start-handlers.sh  start-initializer.sh  start-master.sh  start-server.sh  start-servers-local.sh  start-servers.sh  start-succinct-kv.sh  start-succinct.sh  (+21 more)
server/: CMakeLists.txt
server/include/: Server.h  heartbeat_manager.h  server_heartbeat_manager.h  server_types.h  succinct_shard_async.h
server/src/: QueryService.cc  Server.cc  heartbeat_manager.cc  query_server.cc  server_heartbeat_manager.cc  server_impl.cc  server_impl_tmp.cc
shard-gen/: CMakeLists.txt
shard-gen/src/: shard_generator.cc
sharded/: CMakeLists.txt
sharded-kv/: CMakeLists.txt
sharded-kv/include/: KVAggregatorService.h  KVQueryService.h  kv_ports.h  succinctkv_client.h  succinctkv_constants.h  succinctkv_types.h
sharded-kv/src/: KVAggregatorService.cc  KVQueryService.cc  kv_aggregator.cc  kv_initializer.cc  kv_query_server.cc  succinctkv_constants.cc  succinctkv_types.cc
sharded-kv/templates/: generate.sh  succinctkv.thrift
sharded-kv/templates/thrift/: KVAggregatorService.cc  succinctkv_constants.cc  succinctkv_types.h
sharded/include/: AggregatorService.h  QueryService.h  ports.h  succinct_client.h  succinct_constants.h  succinct_types.h
sharded/src/: AggregatorService.cc  QueryService.cc  aggregator.cc  initializer.cc  query_server.cc  succinct_constants.cc  succinct_types.cc
sharded/templates/: generate.sh  succinct.thrift
test/: CMakeLists.txt  Makefile  SuccinctCoreTest.cpp
test/data/: test_file.succinct
test/src/: SuccinctCoreTest.cpp  succinct_core_test.cc  test_main.cc  test_main.cpp
utils/: CMakeLists.txt
utils/include/: configuration_manager.h  constants.h  heartbeat_manager.h  heartbeat_types.h  logger.h
utils/src/: configuration_manager.cc  heartbeat_types.cc  logger.cc
(+284 files in other folders)
